<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lakebg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/frontImageView"
                android:layout_width="142dp"
                android:layout_height="118dp"
                android:src="@drawable/applogo"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/scoreView"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:text="@string/testMyVariable"
                android:textSize="18sp"
                android:textColor="#FF0000"
                android:gravity="center" />

            <TextView
                android:gravity="center"
                android:id="@+id/displayMission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mission_view_easy"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:textSize="16dp"
                android:padding="5dp"
                android:text="@string/mission_list_easy"
                android:layout_marginBottom="5dp"/>


            <Button
                android:background="@drawable/button_custom"
                android:id="@+id/cameraButton"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:text="@string/camera_button"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF"
                android:textSize="28sp"/>

            <Button
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:background="@drawable/button_custom"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF"
                android:text="New Mission"
                android:textSize="24dp"
                android:id="@+id/rerollButton"/>

        </LinearLayout>




    </ScrollView>


</RelativeLayout>